2006-05-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* HostsConfig.pm, Network/Hosts.pm: added hability to get/set hostname
	and domainname

2006-03-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* GroupsConfig.pm: add maximum and minimum GID
	* UsersConfig.pm: add default shell
	* Time/TimeDate.pm: fixed a couple of typos
	* Users/Users.pm: put default home_prefix to the home dirname (i.e.:
	/home/)

2005-12-12  Carlos Garnacho Parro  <carlosg@gnome.org>

	* org.freedesktop.SystemToolsBackends.service.in, Init/Makefile.am,
	Network/Makefile.am: added files
	* configure.in, Makefile.am: fixed build, added .service file

2005-12-09  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Time/TimeDate.pm (get_local_time) (set_local_time): modified to deal
	with UTC time, renamed accordingly. Modified months to be between 0
	and 11, in the localtime() fashion.

2005-12-05  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Loader.pl.in, Utils/Backend.pm: add --system parameter, to run the
	backends in the system bus
	* Users/Users.pm: fix the code for the root case (number of parameters
	mismatch)
	* test-backends: cosmetic fix

2005-11-20  Carlos Garnacho Parro  <carlosg@gnome.org>

	* GroupsConfig.pm, Users/Groups.pm: removed id from the group struct
	* ShellsConfig.pm: removed, has been moved to UsersConfig, didn't have
	much sense as a separate object.
	* Loader.pl.in: removed ShellsConfig.pm
	* UsersConfig.pm, Users/Users.pm: removed id from the user struct, 
	added shells array here
	* Users/Groups.pm, Users/Users.pm: made the code for
	adding/deleting/modifying users/groups a bit more readable
	* Utils/Monitor.pm: initilize correctly the file monitor if Gamin is
	present

2005-11-17  Carlos Garnacho Parro  <carlosg@gnome.org>

	* HostsConfig.pm: really add a "set" dbus method

2005-11-14  Carlos Garnacho Parro  <carlosg@gnome.org>

	* Utils/Monitor.pm: make use of gamin optional, thus not spreading the
	"changed" signals if it isn't installed
